// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should render and match the snapshot 1`] = `
<button
  class="styled__StyledButton-sc-1gb27vo-0 fRXmMC"
/>
`;

exports[`<Button /> Should render disabled button and match the snapshot 1`] = `
<button
  class="styled__StyledButton-sc-1gb27vo-0 fRXmMC"
  disabled=""
/>
`;

exports[`<Button /> Should render with lodaing and match the snapshot 1`] = `
<button
  class="styled__StyledButton-sc-1gb27vo-0 fRXmMC"
/>
`;
